# project

./: CHANGELOG.md  README.md  main.py  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/api/: modules.animals.rst  modules.world.rst  simulation.rst  src.modules.animals.rst  src.modules.world.rst  src.simulation.rst  src.tests.test_world.rst  src.tests.test_world_gen.rst
src/: main.py  simulation.py
src/modules/: animals.py  map.py  world.py
src/tests/: test_world.py  test_world_gen.py
