[project]
name = "project-priv"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.6.0",
    "pygame>=2.6.1",
]
docs = [
    "catppuccin[pygments]>=2.4.1",
    "furo>=2024.8.6",
    "sphinx>=8.2.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
